Changed csv naming format
Changed csv naming format

--- a/Historic_Sentiment.ipynb
+++ b/Historic_Sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def appendToDf(data):\n",
+    "    try:\n",
+    "        for i in data.get(\"feed\"):\n",
+    "            test_date = i.get(\"time_published\")\n",
+    "            test_date = test_date[:8]\n",
+    "            newDate = datetime.datetime.strptime(test_date, '%Y%m%d').date() \n",
+    "            row = [newDate, i.get(\"title\"), ticker]\n",
+    "            new_df = pd.DataFrame([row],columns=['Date', 'Headline', 'Ticker'])\n",
+    "            #historic_news = pd.concat([historic_news, new_df], axis=0, ignore_index=True)\n",
+    "            return new_df\n",
+    "    except:\n",
+    "        print(\"Request failed\")\n",
+    "        print(data)\n",
+    "    #return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +102,9 @@
     "                historic_news = pd.concat([historic_news, new_df], axis=0, ignore_index=True)\n",
     "        except:\n",
     "            print(\"Request failed\")\n",
-    "            print(\"Starting date: \" +str(windowStart))\n",
-    "            print(\"Starting date: \" +str(windowEnd))\n",
+    "            print(\"windowStart is: \" +str(windowStart))\n",
+    "            print(\"windowEnd is: \" +str(windowEnd))\n",
     "            print(data)\n",
-    "            break\n",
     "        windowStart = windowEnd\n",
     "        windowEnd = windowEnd + delta\n",
     "        count = count + 1\n",
@@ -94,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSFT\n"
+      "TSLA\n"
      ]
     }
    ],
@@ -113,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final rolling date is: 2023-03-02\n"
+      "Final rolling date is: 2023-03-03\n"
      ]
     }
    ],
@@ -130,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -138,19 +159,19 @@
      "output_type": "stream",
      "text": [
       "<bound method NDFrame.head of             Date                                           Headline Ticker\n",
-      "0     2022-03-01  MSFT: Better Buy for 2022: Salesforce.com vs. ...   MSFT\n",
-      "1     2022-03-02  Facebook, YouTube, TikTok restrict access to R...   MSFT\n",
-      "2     2022-03-02  Apple, Google, Netflix, and Visa join the grow...   MSFT\n",
-      "3     2022-03-02  Ukraine calls on gaming industry to suspend bu...   MSFT\n",
-      "4     2022-03-02  TikTok faces delicate dance to keep all sides ...   MSFT\n",
+      "0     2022-03-01  Tesla Rival Slashes 2022 Production Outlook; L...   TSLA\n",
+      "1     2022-03-01  Nasdaq moves into positive territory as broade...   TSLA\n",
+      "2     2022-03-01  BYD to use Baidu's autonomous driving technolo...   TSLA\n",
+      "3     2022-03-01  Chinese electric car makers' February sales de...   TSLA\n",
+      "4     2022-03-02  Box Stock Jumps As Fourth-Quarter Results, Out...   TSLA\n",
       "...          ...                                                ...    ...\n",
-      "4623  2023-02-02  How to protect yourself from tax fraud and sca...   MSFT\n",
-      "4624  2023-02-02  Zacks Earnings Trends Highlights: Microsoft, I...   MSFT\n",
-      "4625  2023-02-02  Pinterest Bows Down To Macro Uncertainties; Le...   MSFT\n",
-      "4626  2023-02-02  Samsung Hints Metaverse Ambitions At Product L...   MSFT\n",
-      "4627  2023-02-02      US filings for jobless aid lowest since April   MSFT\n",
+      "4681  2023-02-03                Why Tesla Stock Keeps Racing Higher   TSLA\n",
+      "4682  2023-02-03  Elon Musk surprise appearance as high-profile ...   TSLA\n",
+      "4683  2023-02-03  Bill Gates says Elon Musk not yet a 'great phi...   TSLA\n",
+      "4684  2023-02-03  Market Rally Powers Higher On Tame Fed, Meta: ...   TSLA\n",
+      "4685  2023-02-03  Treasury makes more electric SUVs eligible for...   TSLA\n",
       "\n",
-      "[4628 rows x 3 columns]>\n"
+      "[4686 rows x 3 columns]>\n"
      ]
     }
    ],
@@ -160,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "histname = \"datasets/\" + ticker + \"-365-day-hist.csv\"\n",
+    "histname = \"datasets/\" + ticker + \"-hist.csv\"\n",
     "hist.to_csv(histname)"
    ]
   }
