Optimizing dataset creation code
Removed todaysSentiment related code and dropping all columns from stock data except for close

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -615,21 +615,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [],
       "source": [
         "#Importing data from CSV file\n",
         "import csv\n",
         "\n",
-        "with open('datasets/AAPL-365-day-hist.csv', newline='') as f:\n",
+        "with open('datasets/AAPL-hist.csv', newline='') as f:\n",
         "    reader = csv.reader(f)\n",
         "    historic_news_list = list(reader)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 98,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [
         {
@@ -781,7 +781,7 @@
               "[4602 rows x 4 columns]"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [
         {
@@ -877,44 +877,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[nltk_data] Downloading package vader_lexicon to\n",
-            "[nltk_data]     C:\\Users\\Ishaan\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "-----------DF\n",
-            "            compound Ticker\n",
-            "Date                       \n",
-            "2023-02-14      0.02   AAPL\n",
-            "2023-02-15      0.02   AAPL\n",
-            "2023-02-16     -0.02   AAPL\n",
-            "2023-02-17      0.09   AAPL\n",
-            "2023-02-18      0.13   AAPL\n",
-            "2023-02-19     -0.06   AAPL\n",
-            "2023-02-20     -0.14   AAPL\n",
-            "2023-02-21     -0.21   AAPL\n",
-            "2023-02-22      0.09   AAPL\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\Ishaan\\AppData\\Local\\Temp\\ipykernel_19992\\615234286.py:36: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  df = round(dataframe.groupby('Date')['Date', 'compound'].mean(), 2)\n",
-            "C:\\Users\\Ishaan\\AppData\\Local\\Temp\\ipykernel_19992\\615234286.py:36: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-            "  df = round(dataframe.groupby('Date')['Date', 'compound'].mean(), 2)\n",
             "[nltk_data] Downloading package vader_lexicon to\n",
             "[nltk_data]     C:\\Users\\Ishaan\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
@@ -926,11 +895,7 @@
         }
       ],
       "source": [
-        "#print(\"HISTORIC SENTIMENT\")\n",
-        "HistoricSentiment = SentimentAnalysisNewsData(historic_parsed_news)\n",
-        "#print(\"\\n\")\n",
-        "#print(\"TODAYS SENTIMENT\")\n",
-        "TodaysSentiment = SentimentAnalysisNewsData(parsed_news, printOut=True)"
+        "HistoricSentiment = SentimentAnalysisNewsData(historic_parsed_news)"
       ]
     },
     {
