--- a/Historic_Sentiment.ipynb
+++ b/Historic_Sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,29 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def appendToDf(data):\n",
-    "    try:\n",
-    "        for i in data.get(\"feed\"):\n",
-    "            test_date = i.get(\"time_published\")\n",
-    "            test_date = test_date[:8]\n",
-    "            newDate = datetime.datetime.strptime(test_date, '%Y%m%d').date() \n",
-    "            row = [newDate, i.get(\"title\"), ticker]\n",
-    "            new_df = pd.DataFrame([row],columns=['Date', 'Headline', 'Ticker'])\n",
-    "            #historic_news = pd.concat([historic_news, new_df], axis=0, ignore_index=True)\n",
-    "            return new_df\n",
-    "    except:\n",
-    "        print(\"Request failed\")\n",
-    "        print(data)\n",
-    "    #return new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,43 +93,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TSLA\n"
+      "AAPL\n"
      ]
     }
    ],
    "source": [
     "\n",
     "ticker = input('Input Ticker:\\n')  \n",
-    "print(ticker)"
+    "print(ticker)\n",
+    "\n",
+    "UserInt = input('Input Interval: \\n')\n",
+    "print(UserInt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final rolling date is: 2023-03-03\n"
+      "Request failed\n",
+      "windowStart is: 2020-02-22\n",
+      "windowEnd is: 2020-03-08\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-03-08\n",
+      "windowEnd is: 2020-03-23\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-03-23\n",
+      "windowEnd is: 2020-04-07\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-04-07\n",
+      "windowEnd is: 2020-04-22\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-04-22\n",
+      "windowEnd is: 2020-05-07\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-05-07\n",
+      "windowEnd is: 2020-05-22\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-05-22\n",
+      "windowEnd is: 2020-06-06\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-06-06\n",
+      "windowEnd is: 2020-06-21\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-06-21\n",
+      "windowEnd is: 2020-07-06\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-07-06\n",
+      "windowEnd is: 2020-07-21\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-07-21\n",
+      "windowEnd is: 2020-08-05\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-08-05\n",
+      "windowEnd is: 2020-08-20\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-08-20\n",
+      "windowEnd is: 2020-09-04\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-09-04\n",
+      "windowEnd is: 2020-09-19\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-09-19\n",
+      "windowEnd is: 2020-10-04\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-10-04\n",
+      "windowEnd is: 2020-10-19\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-10-19\n",
+      "windowEnd is: 2020-11-03\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-11-03\n",
+      "windowEnd is: 2020-11-18\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-11-18\n",
+      "windowEnd is: 2020-12-03\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-12-03\n",
+      "windowEnd is: 2020-12-18\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2020-12-18\n",
+      "windowEnd is: 2021-01-02\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-01-02\n",
+      "windowEnd is: 2021-01-17\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-01-17\n",
+      "windowEnd is: 2021-02-01\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-02-01\n",
+      "windowEnd is: 2021-02-16\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-02-16\n",
+      "windowEnd is: 2021-03-03\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-03-03\n",
+      "windowEnd is: 2021-03-18\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-03-18\n",
+      "windowEnd is: 2021-04-02\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-04-02\n",
+      "windowEnd is: 2021-04-17\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-04-17\n",
+      "windowEnd is: 2021-05-02\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-05-02\n",
+      "windowEnd is: 2021-05-17\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-05-17\n",
+      "windowEnd is: 2021-06-01\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-06-01\n",
+      "windowEnd is: 2021-06-16\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-06-16\n",
+      "windowEnd is: 2021-07-01\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-07-01\n",
+      "windowEnd is: 2021-07-16\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-07-16\n",
+      "windowEnd is: 2021-07-31\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-07-31\n",
+      "windowEnd is: 2021-08-15\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-08-15\n",
+      "windowEnd is: 2021-08-30\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-08-30\n",
+      "windowEnd is: 2021-09-14\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-09-14\n",
+      "windowEnd is: 2021-09-29\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-09-29\n",
+      "windowEnd is: 2021-10-14\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-10-14\n",
+      "windowEnd is: 2021-10-29\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-10-29\n",
+      "windowEnd is: 2021-11-13\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-11-13\n",
+      "windowEnd is: 2021-11-28\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-11-28\n",
+      "windowEnd is: 2021-12-13\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-12-13\n",
+      "windowEnd is: 2021-12-28\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2021-12-28\n",
+      "windowEnd is: 2022-01-12\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2022-01-12\n",
+      "windowEnd is: 2022-01-27\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2022-01-27\n",
+      "windowEnd is: 2022-02-11\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Request failed\n",
+      "windowStart is: 2022-02-11\n",
+      "windowEnd is: 2022-02-26\n",
+      "{'Information': 'No articles found. Please adjust the time range or refer to the API documentation https://www.alphavantage.co/documentation#newsapi and try again.'}\n",
+      "Final rolling date is: 2023-03-08\n"
      ]
     }
    ],
    "source": [
-    "hist = getHistoricNewsData(ticker)"
+    "hist = getHistoricNewsData(ticker, interval = UserInt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,19 +336,19 @@
      "output_type": "stream",
      "text": [
       "<bound method NDFrame.head of             Date                                           Headline Ticker\n",
-      "0     2022-03-01  Tesla Rival Slashes 2022 Production Outlook; L...   TSLA\n",
-      "1     2022-03-01  Nasdaq moves into positive territory as broade...   TSLA\n",
-      "2     2022-03-01  BYD to use Baidu's autonomous driving technolo...   TSLA\n",
-      "3     2022-03-01  Chinese electric car makers' February sales de...   TSLA\n",
-      "4     2022-03-02  Box Stock Jumps As Fourth-Quarter Results, Out...   TSLA\n",
+      "0     2022-03-01  US stocks fall, oil tops $105 as Ukraine crisi...   AAPL\n",
+      "1     2022-03-02  Apple halts product sales in Russia after Ukra...   AAPL\n",
+      "2     2022-03-02  Russia says its economy is taking 'serious blo...   AAPL\n",
+      "3     2022-03-02  Rich Russians turn to luxury jewellery, watche...   AAPL\n",
+      "4     2022-03-03  Market Rallies, But Still Must Do This; 5 Stoc...   AAPL\n",
       "...          ...                                                ...    ...\n",
-      "4681  2023-02-03                Why Tesla Stock Keeps Racing Higher   TSLA\n",
-      "4682  2023-02-03  Elon Musk surprise appearance as high-profile ...   TSLA\n",
-      "4683  2023-02-03  Bill Gates says Elon Musk not yet a 'great phi...   TSLA\n",
-      "4684  2023-02-03  Market Rally Powers Higher On Tame Fed, Meta: ...   TSLA\n",
-      "4685  2023-02-03  Treasury makes more electric SUVs eligible for...   TSLA\n",
+      "4795  2023-02-13  SPY: Diversify Your Portfolio in 2023 With The...   AAPL\n",
+      "4796  2023-02-13  10 Stocks That Are Crushing Short Sellers In 2...   AAPL\n",
+      "4797  2023-02-13  Why Steve Wozniak Thinks ChatGPT Can Never Rep...   AAPL\n",
+      "4798  2023-02-13  Pressure Sensor Market Report will Achieve USD...   AAPL\n",
+      "4799  2023-02-13              1 Billion Reasons to Love Apple Stock   AAPL\n",
       "\n",
-      "[4686 rows x 3 columns]>\n"
+      "[4800 rows x 3 columns]>\n"
      ]
     }
    ],
@@ -181,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "histname = \"datasets/\" + ticker + \"-hist.csv\"\n",
+    "histname = \"datasets/\" + ticker + \"-test-hist.csv\"\n",
     "hist.to_csv(histname)"
    ]
   }
@@ -206,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
